[package]
name = "sensor-display"
version = "0.0.0"
edition = "2021"

[dependencies]
sensor-core = { git = "https://github.com/RouHim/sensor-core", tag = "v1.0.1"}        # Sensor core library
serde = { version = "1.0.185", features = ["derive"] }                                  # De/Serialization
bincode = "1.3.3"                                                                       # Bincode De/Serialization
rayon = "1.7.0"                                                                         # Parallelization
message-io = { version = "0.17.0", default-features = false, features = ["tcp"] }       # TCP transport
image = "0.24.7"                                                                        # Image processing
eframe = { version = "0.22.0", features = ["wayland"] }                                 # GUI
egui_extras = { version = "0.22", features = ["image"] }                                # GUI extras
log = "0.4.20"                                                                          # Logging
env_logger = "0.10.0"                                                                   # Logging
local-ip-address = "0.5.4"                                                              # Local IP address
hostname = "0.3.1"                                                                      # Hostname
self_update = { version = "0.37.0", features = ["rustls"], default-features = false }   # Self update

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
strip = true # Strip debug symbols