[package]
name = "sensor-display"
version = "0.0.0"
edition = "2021"

[dependencies]
sensor-core = "1.12.5"                                                                 # Sensor core
serde = { version = "1.0.197", features = ["derive"] }                                  # De/Serialization
serde_json = "1.0"                                                                      # JSON serialization
bincode = "1.3.3"                                                                       # Bincode De/Serialization
rayon = "1.9.0"                                                                         # Parallelization
ureq = { version = "2.10", features = ["json"] }                                        # HTTP client
image = "0.24.9"                                                                        # Image processing
eframe = "0.24.1"                                                                        # GUI
egui_extras = { version = "0.24.2", features = ["image"] }                                # GUI extras
log = "0.4.21"                                                                          # Logging
env_logger = "0.11.2"                                                                   # Logging
local-ip-address = "0.6.1"                                                              # Local IP address
hostname = "0.3.1"                                                                      # Hostname
self_update = { version = "0.39.0", features = ["rustls"], default-features = false }   # Self update
uuid = { version = "1.0", features = ["v4"] }                                           # UUID generation
libc = "0.2"                                                                            # System calls

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
strip = true # Strip debug symbols